# Intelligent-Incident-Workflow-Assistant

./: .gitignore  README.md  RUNNING.md  package.json
apps/backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
apps/backend/src/: config.py  main.py
apps/backend/src/api/: dependencies.py
apps/backend/src/api/routes/: analytics.py  incidents.py
apps/backend/src/core/: config.py  database.py
apps/backend/src/models/: __init__.py  event.py  incident.py
apps/backend/src/services/: ai_service.py
apps/backend/tests/: test_api.py
apps/frontend/: next.config.js  package.json  tailwind.config.js
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/app/analytics/: page.tsx
apps/frontend/src/app/incidents/: page.tsx
apps/frontend/src/app/incidents/[id]/: page.tsx
apps/frontend/src/components/: IncidentForm.tsx  IncidentList.tsx  IncidentQuickActions.tsx
apps/frontend/src/types/: index.ts
